<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.kurditing.home.dashboard.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.kurditing.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/courseFragment"
        android:name="com.example.kurditing.mycourse.CourseFragment"
        android:label="fragment_course"
        tools:layout="@layout/fragment_course"/>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.kurditing.account.AccountFragment"
        android:label="fragment_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/funFragment"
        android:name="com.example.kurditing.funFragment"
        android:label="fragment_fun"
        tools:layout="@layout/fragment_fun" />
</navigation>