<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment"
    android:id="@+id/FragmentCari">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_cancel"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/poppins"
            android:text="Batal"
            android:textAllCaps="false"
            android:textColor="@color/colorPurpleDark"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_search"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_search"
            android:drawableLeft="@drawable/ic_searchbox"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/search_text"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/layout_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/kategori"
            android:textColor="@color/colorPurpleDark" />

        <Button
            style="?borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="left|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="Digital Marketing"
            android:textAllCaps="false"
            android:textColor="@color/colorPurpleBlack" />

        <Button
            style="?borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="left|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="Closing dan Penjualan"
            android:textAllCaps="false"
            android:textColor="@color/colorPurpleBlack" />

        <Button
            style="?borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="left|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="Model Bisnis"
            android:textAllCaps="false"
            android:textColor="@color/colorPurpleBlack" />

        <Button
            style="?borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="left|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="Keahlian lainnya..."
            android:textAllCaps="false"
            android:textColor="@color/colorPurpleBlack" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>