...
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:capitalize="words"
                android:fontFamily="@font/poppins"
                android:text=" "
                android:textColor="@color/colorPurpleBlack"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView32"
                app:layout_constraintStart_toEndOf="@+id/textView32"
                tools:text="Wilson Angga" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
...
